--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,13 @@
-aioquic
-
+aioquic==1.3.0
+attrs==25.4.0
+certifi==2025.10.5
+cffi==2.0.0
+cryptography==46.0.3
+mininet==2.3.0.dev6
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.23
+pylsqpack==0.3.23
+pyOpenSSL==25.3.0
+service-identity==24.2.0
+typing_extensions==4.15.0
